// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) DefectType render normally if data is exist 1`] = `
<div>
  <Tabs
    initialSelectedTabIndex={0}
  >
    <TabList
      className="tabs"
    >
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        General
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Thin Film
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Photo
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Etch
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Testing
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        CF
      </Tab>
    </TabList>
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
  </Tabs>
</div>
`;

exports[`(Component) DefectType render normally if data is not exist and departmentCode is CF 1`] = `
<div>
  <Tabs
    initialSelectedTabIndex={0}
  >
    <TabList
      className="tabs"
    >
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        General
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Thin Film
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Photo
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Etch
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Testing
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        CF
      </Tab>
    </TabList>
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    >
      <DefectTypeItem
        defectTypeId={2}
        defectTypeName="TestDefect2"
        handleClick={[Function]}
        index={0}
        isSelected={false}
      />
    </TabPanel>
  </Tabs>
</div>
`;

exports[`(Component) DefectType render normally if data is not exist and departmentCode is Etch 1`] = `
<div>
  <Tabs
    initialSelectedTabIndex={0}
  >
    <TabList
      className="tabs"
    >
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        General
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Thin Film
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Photo
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Etch
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Testing
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        CF
      </Tab>
    </TabList>
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    >
      <DefectTypeItem
        defectTypeId={2}
        defectTypeName="TestDefect2"
        handleClick={[Function]}
        index={0}
        isSelected={false}
      />
    </TabPanel>
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
  </Tabs>
</div>
`;

exports[`(Component) DefectType render normally if data is not exist and departmentCode is General 1`] = `
<div>
  <Tabs
    initialSelectedTabIndex={0}
  >
    <TabList
      className="tabs"
    >
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        General
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Thin Film
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Photo
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Etch
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Testing
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        CF
      </Tab>
    </TabList>
    <TabPanel
      className="tabContent"
    >
      <DefectTypeItem
        defectTypeId={2}
        defectTypeName="TestDefect2"
        handleClick={[Function]}
        index={0}
        isSelected={false}
      />
    </TabPanel>
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
  </Tabs>
</div>
`;

exports[`(Component) DefectType render normally if data is not exist and departmentCode is Photo 1`] = `
<div>
  <Tabs
    initialSelectedTabIndex={0}
  >
    <TabList
      className="tabs"
    >
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        General
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Thin Film
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Photo
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Etch
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Testing
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        CF
      </Tab>
    </TabList>
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    >
      <DefectTypeItem
        defectTypeId={2}
        defectTypeName="TestDefect2"
        handleClick={[Function]}
        index={0}
        isSelected={false}
      />
    </TabPanel>
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
  </Tabs>
</div>
`;

exports[`(Component) DefectType render normally if data is not exist and departmentCode is Testing 1`] = `
<div>
  <Tabs
    initialSelectedTabIndex={0}
  >
    <TabList
      className="tabs"
    >
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        General
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Thin Film
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Photo
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Etch
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Testing
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        CF
      </Tab>
    </TabList>
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    >
      <DefectTypeItem
        defectTypeId={2}
        defectTypeName="TestDefect2"
        handleClick={[Function]}
        index={0}
        isSelected={false}
      />
    </TabPanel>
    <TabPanel
      className="tabContent"
    />
  </Tabs>
</div>
`;

exports[`(Component) DefectType render normally if data is not exist and departmentCode is ThinFilm 1`] = `
<div>
  <Tabs
    initialSelectedTabIndex={0}
  >
    <TabList
      className="tabs"
    >
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        General
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Thin Film
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Photo
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Etch
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        Testing
      </Tab>
      <Tab
        isDisabled={false}
        isSelected={false}
      >
        CF
      </Tab>
    </TabList>
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    >
      <DefectTypeItem
        defectTypeId={2}
        defectTypeName="TestDefect2"
        handleClick={[Function]}
        index={0}
        isSelected={false}
      />
    </TabPanel>
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
    <TabPanel
      className="tabContent"
    />
  </Tabs>
</div>
`;
